<resources>
    <string name="app_name">RoomDataBase</string>

    <!-- Strings used for fragments for navigation -->
    <string name="button_save">Save</string>
    <string name="page_title">Enter Your Data</string>
    <string name="add_emp">Add Employee</string>
    <string name="add_project">Add project</string>
    <string name="display_employee_data">Display Employee</string>
    <string name="display_project_data">Display Project</string>
    <string name="enter_either_employee_id_or_name">Enter Employee Id/name</string>
    <string name="search">Search</string>
    <string name="edit_project">Edit Project</string>
    <string name="project_id">Project Id</string>
    <string name="project_name">Project Name</string>
    <string name="update">Update</string>
    <string name="username">UserName</string>
    <string name="email">Email</string>
    <string name="sort_in_ascending_order">Sort in ascending order</string>
    <string name="count">Count :</string>
    <string name="enter_project_data">Enter project data</string>
    <string name="delete">delete</string>
    <string name="error_not_found">No similar values found in the table</string>
    <string name="count_label">Count: %1$d</string>
    <string name="join_query">Join Query</string>

</resources>