<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:padding="@dimen/padding_10dp"
    android:orientation="vertical">

    <com.google.android.material.textview.MaterialTextView
        style="@style/user_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_margin"
        android:gravity="center"
        android:text="@string/page_title" />

    <EditText
        android:id="@+id/userName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/medium_margin"
        android:autofillHints="@string/username"
        android:hint="@string/username"
        android:inputType="text"
        android:minHeight="@dimen/min_height_48dp"
        android:singleLine="true" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/medium_margin"
        android:autofillHints="@string/email"
        android:hint="@string/email"
        android:inputType="text|textWebEmailAddress"
        android:minHeight="@dimen/min_height_48dp"
        android:singleLine="true" />

    <Spinner
        android:id="@+id/spinnerProjectId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/medium_margin"
        android:autofillHints="@string/email"
        android:hint="@string/project_id"
        android:inputType="number"
        android:minHeight="@dimen/min_height_48dp"
        android:singleLine="true" />

    <Button
        android:id="@+id/btnEmpSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/medium_margin"
        android:background="@color/colorPrimary"
        android:text="@string/button_save"
        android:textColor="@color/white" />
</LinearLayout>