<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/padding_10dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:gravity="center"
        android:padding="@dimen/dim_16dp"
        android:textColor="@color/white"
        android:text="@string/edit_project"
        android:textSize="@dimen/txt_size_20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etNewProjId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dim_16dp"
        android:hint="@string/project_id"
        android:inputType="number"
        android:minHeight="@dimen/min_height_48dp"
        android:autofillHints="@string/project_id" />

    <EditText
        android:id="@+id/etNewProjName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dim_16dp"
        android:hint="@string/project_name"
        android:inputType="text"
        android:minHeight="@dimen/min_height_48dp"
        android:autofillHints="@string/project_name" />

    <Button
        android:id="@+id/btnUpdateProject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/medium_margin"
        android:background="@color/colorPrimary"
        android:text="@string/update"
        android:textColor="@color/white" />

</LinearLayout>