<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:gravity="center"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/tvProjId"
        style="@style/word_title"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_gravity="start"
        android:layout_weight="0.2"
        tools:text="@string/project_id"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/tvProjName"
        style="@style/word_title"
        tools:text="@string/project_name"
        android:layout_weight="0.3"
        android:layout_gravity="start"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center"
        android:textColor="@color/black"
        />

    <ImageView
        android:id="@+id/icProjEdit"
        android:src="@drawable/ic_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_6dp"
        android:layout_gravity="end"
        android:scaleType="center"
        android:contentDescription="@string/edit_project" />

    <ImageView
        android:id="@+id/icProjDelete"
        android:src="@drawable/ic_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="6dp"
        android:layout_gravity="end"
        android:scaleType="center"
        android:layout_weight="0.2"
        android:contentDescription="@string/delete" />

</LinearLayout>