<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:padding="@dimen/padding_10dp"
    android:orientation="vertical">

    <com.google.android.material.textview.MaterialTextView
        style="@style/user_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_margin"
        android:gravity="center"
        android:text="@string/enter_project_data" />

    <EditText
        android:id="@+id/projectId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/medium_margin"
        android:hint="@string/project_id"
        android:inputType="number"
        android:singleLine="true"
        android:minHeight="@dimen/min_height_48dp"
        android:autofillHints="@string/project_id" />

    <EditText
        android:id="@+id/projName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/medium_margin"
        android:hint="@string/project_name"
        android:inputType="text"
        android:singleLine="true"
        android:minHeight="@dimen/min_height_48dp"
        android:autofillHints="@string/project_name" />

    <Button
        android:id="@+id/btn_projSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/medium_margin"
        android:background="@color/colorPrimary"
        android:text="@string/button_save"
        android:textColor="@color/white" />
</LinearLayout>