<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btn_addemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_user"
        app:layout_constraintBottom_toTopOf="@+id/btn_addproject"
        app:layout_constraintEnd_toStartOf="@+id/btn_displayemp"
        app:layout_constraintHorizontal_bias="0.596"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.444" />

    <Button
        android:id="@+id/btn_addproject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_project"
        app:layout_constraintBottom_toTopOf="@+id/container"
        app:layout_constraintEnd_toStartOf="@+id/btn_displayproj"
        app:layout_constraintHorizontal_bias="0.536"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.494" />

    <Button
        android:id="@+id/btn_displayemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/display_employee_data"
        app:layout_constraintBottom_toTopOf="@+id/btn_displayproj"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.867"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.434" />

    <Button
        android:id="@+id/btn_displayproj"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/display_project_data"
        app:layout_constraintBottom_toTopOf="@+id/container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.917"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.494" />

<!--    Hidden fields-->
    <EditText
        android:id="@+id/et_empvalue"
        android:layout_width="273dp"
        android:layout_height="42dp"
        android:ems="10"
        android:hint="@string/enter_either_employee_id_or_name"
        android:inputType="text"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.159"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_addproject"
        android:autofillHints="@string/enter_either_employee_id_or_name" />

    <Button
        android:id="@+id/btn_searchEmp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:text="@string/search"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/et_empvalue"
        app:layout_constraintTop_toBottomOf="@+id/btn_displayproj" />

    <Button
        android:id="@+id/btn_ascProjValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sort_in_ascending_order"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/container"
        app:layout_constraintEnd_toStartOf="@+id/tv_projCount"
        app:layout_constraintHorizontal_bias="0.704"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_addproject"
        app:layout_constraintVertical_bias="0.546" />

    <TextView
        android:id="@+id/tv_projCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/count"
        android:visibility="gone"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.79"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_displayproj" />

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="412dp"
        android:layout_height="366dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>